deploy/backend-deployment.yaml
# SERVICE
apiVersion: v1
kind: Service
metadata:
    name: dhrishti-backend-service
spec:
    selector:
        app: django-pod
    ports:
    - port: 80
      name: http
      targetPort: 8000
---
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dhrishti-backend-deployment
    labels:
        app: django
spec:
    replicas: 1
    selector:
        matchLabels:
            app: django-pod
    template:
        metadata:
            name: dhrishti-backend-pod
            labels:
                app: django-pod
        spec:
            containers:
            - name: dhrishti-backend
              image: eu.gcr.io/arcane-boulder-263622/dhrishti-backend
              ports:
              - containerPort: 8000
